Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,9 +52,24 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 11.11.2021</div>
 <ul>
+<li class="poznamka">
+<div class="polozka">Brownie s višněmi</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Bramborová polévka s houbami a majoránkou samostatně <em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
 <div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Bramborová polévka s houbami a majoránkou s menu <em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">29 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
@@ -144,7 +159,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s jogurtovou krenovou omackou, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstve prazmy s jogurtovou krenovou omackou, pecene baby brambory, salatek 175</li><li>Smazena ryze s doruzova pecenou veprovou peceni, brokolici a zeleninou, jablecne catny se zazvorem, salatek 139</li><li>Smazene rizecky z teleci a seleci kyty, stouchane brambory s kapustou  a cibulkou, salatek z cervene repy, citron {L} 169</li><li>Vegetarianske lasagne s pecenymi paprikami, rajcaty a cervenou cockou zapecene ve smetanove omacce, salatek {L} 139</li><li></li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s jogurtovou krenovou omackou, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstve prazmy s jogurtovou krenovou omackou, pecene baby brambory, salatek 175</li><li>Smazena ryze s doruzova pecenou veprovou peceni, brokolici a zeleninou, jablecne catny se zazvorem, salatek 139</li><li>Smazene rizecky z teleci a seleci kyty, stouchane brambory s kapustou  a cibulkou, salatek z cervene repy, citron {L} 169</li><li>Vegetarianske lasagne s pecenymi paprikami, rajcaty a cervenou cockou zapecene ve smetanove omacce, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
