Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,21 +7,21 @@
 <h5>Čtvrtek, 11. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Kapustová s párečkem</strong>
+<strong>Tomatová s pestem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Smažený Vepřový provensálský řízek s vařeným bramborem a okurkou</strong>
+<strong>Vepřová líčka na smetaně s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Milánské těstoviny s parmazánem</strong>
+<strong>Mexické pikantní fazole s grilovanou klobásou a tortillou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
