Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -62,13 +62,18 @@
 <div class="cena">55 Kč</div>
 <div class="clear"></div>
 </li>
+<li class="poznamka">
+<div class="polozka">Pařížský čoko dort bez lepku</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
-<div class="polozka">300ml Bramborová polévka s houbami a majoránkou samostatně <em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="polozka">300ml Bramborová polévka s houbami a majoránkou samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
 <div class="cena">39 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
-<div class="polozka">300ml Bramborová polévka s houbami a majoránkou s menu <em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="polozka">300ml Bramborová polévka s houbami a majoránkou s menu <em title="Obiloviny obsahující lepek">1</em><em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
 <div class="cena">29 Kč</div>
 <div class="clear"></div>
 </li>
@@ -159,7 +164,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s jogurtovou krenovou omackou, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstve prazmy s jogurtovou krenovou omackou, pecene baby brambory, salatek 175</li><li>Smazena ryze s doruzova pecenou veprovou peceni, brokolici a zeleninou, jablecne catny se zazvorem, salatek 139</li><li>Smazene rizecky z teleci a seleci kyty, stouchane brambory s kapustou  a cibulkou, salatek z cervene repy, citron {L} 169</li><li>Vegetarianske lasagne s pecenymi paprikami, rajcaty a cervenou cockou zapecene ve smetanove omacce, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 139</li><li>Peceny filet z cerstveho norskeho lososa se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 169</li><li>Balkanska musaka s hovezim a krutim masem,  pecenymi cuketami, lilky, bylinkami a rajcaty zapecena ve smetanove omacce, salatek {L} 139</li><li>Burger s trhanou pecenou husou, konfitem z cervene cibule s visnemi, listovym salatem, rajcaty a sriracha majonezou, pecene baby brambory, salatek ( L ) 169</li><li>Burrito s pikantnim fazolovym chilli s pecenymi palivymi paprikami, zakysana smetana, zeleninova ryze, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
