Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Čtvrtek, 11. 11. 2021</h5>
+<h5>Pátek, 12. 11. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Tomatová s pestem</strong>
@@ -50,49 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Čtvrtek 11.11.2021</div>
+<div class="nadpis">Pátek 12.11.2021</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Brownie s višněmi</div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Mrkvový dort</div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Pařížský čoko dort bez lepku</div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Bramborová polévka s houbami a majoránkou samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Bramborová polévka s houbami a majoránkou s menu <em title="Obiloviny obsahující lepek">1</em><em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Pečené krůtí prso na bylinkách, smetanová omáčka, bramborová kaše s dýní  <em title="Ryby">4</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Uzená krkovička, křenová omáčka, opečené grenaille, restovaná cibulka  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Falafel, lilkový baba ganoush, česnekový dip, pita chléb, míchaný salát</div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -103,13 +63,10 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou, nudlemi a játrovou rýží</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hrachová s klobásou a pečenými krutony</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Husí kaldoun se žemlovým knedlíčkem a nudlemi</td><td class="menuPrice">49,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  ok</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Frankfurtská s klobásou</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Husí kaldoun s žemlovým knedlíčkem a nudlemi</td><td class="menuPrice">49,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Rizoto z vepřového masa se zeleninou a houbami, strouhaný sýr, kyselá okurka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaná hovězí pečeně po cikánsku, dušená jasmínová rýže</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová kýta na paprice, kynuté houskové knedlíky</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Sekané masové biftečky na tálu s pepřovou omáčkou, bramborová kaše s máslem, vídeňská cibule</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Medailonky z vepřové panenky na fazolových luscích s anglickou slaninou, pečené brambory s kmínem</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, brokolicové pyré se sýrem, grilované rajče s bazalkovým pestem, volské oko</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné sýrové omáčce, restované špecle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná salátem coleslaw, kuřecími nudličky v gyros koření a uzeným sýrem, bramborové hranolky, mexický dip</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">400g</td><td class="menuName">Pečené husí stehno s červeným perníkovým zelím a bílým zelím, kynuté houskové knedlíky a bramborové knedlíky   </td><td class="menuPrice">195,-</td></tr><tr><td class="menuWeight">1/4</td><td class="menuName">1/4 (1000g) Pomalu pečená svatomartinská husa s červeným perníkovým zelím a bílým zelím, kynuté houskové knedlíky a bramborové knedlíky           </td><td class="menuPrice">349,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů se zeleninou promíchaný olivovým olejem, smažené stripsy z vepřové panenky, vařené vejce</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Náš kynutý knedlík s borůvkami na smetanové omáčce s cukrem, máslem a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nepečený piškotový řez s broskvemi a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Štěpánská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová plec na česneku, bramborové knedlíky, špenát</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na roštu s opečenou klobásou, pečené brambory s kmínem</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Plátkovaná vepřová pečeně, grilovaný lilek s balsamicem, celerové pyré, vařené vejce</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné hořčičné omáčce, restované špetzle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Pšeničná tortilla plněná trhanými listy salátů a zeleninou, česnekovým dresinkem, vepřovou panenkou, smažené bramborové hranolky, zakysaná smetana</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">400g</td><td class="menuName">Pečené husí stehno s červeným perníkovým zelím a bílým zelím, kynuté houskové knedlíky a bramborové knedlíky   </td><td class="menuPrice">195,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát, ochucený citronovým dresinkem grilovaný hermelín, vařené vejce, brusinkové žerve</td><td class="menuPrice">´135,-</td></tr><tr><td class="menuWeight">1/4</td><td class="menuName">1/4 (1000g) Pomalu pečená svatomartinská husa s červeným perníkovým zelím a bílým zelím, kynuté houskové knedlíky a bramborové knedlíky           </td><td class="menuPrice">349,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Náš kynutý knedlík s borůvkami na smetanové omáčce s cukrem, máslem a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,4L</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nepečený piškotový řez s broskvemi a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -156,7 +113,7 @@ a vanilkovým Crème fraîche	</td>
 </tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Česnečka se sýrem a smaženými chlebovými krutony 1ab,7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Burgundská hovězí pečeně s bramborovou kaší a restovanými nakládanými cibulkami s anglickou slaninou a petrželkou 1a,7,9,12 </td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Krůtí burger s anglickou slaninou, čedarem, ledovým salátem, rajčaty a cibulí s hranolky a ďábelskou majonézou 1a,3,7,10,11</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Přírodní pečená treska s máslovým hráškem s mátou a vařenými brambory Grenaille 4,7</td><td class="pricem">139 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Dýňový krém se zázvorem a chilli 1a,7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vepřová pečeně špikovaná sušenými švestkami s glazovanou mrkví a mačkanými brambory s pažitkou 1a,7</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažený sýr plněný šunkou s americkými brambory, naší tatarskou omáčkou a trhaným salátem 1a,3,7,10</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Pečená kuřecí křídla s coleslaw salátem, blue cheese omáčkou a rozpečenou bylinkovou bagetou 1a,3,7,10</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
