Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,6 +52,11 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 12.11.2021</div>
 <ul>
+<li class="poznamka">
+<div class="polozka">Věneček</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Frankfurtská polévka s uzeným masem samostatně <em title="Mléko">7</em></div>
 <div class="cena">39 Kč</div>
