Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -151,7 +151,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 139</li><li>Peceny filet z cerstveho norskeho lososa se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 169</li><li>Balkanska musaka s hovezim a krutim masem,  pecenymi cuketami, lilky, bylinkami a rajcaty zapecena ve smetanove omacce, salatek {L} 139</li><li>Burger s trhanou pecenou husou, konfitem z cervene cibule s visnemi, listovym salatem, rajcaty a sriracha majonezou, pecene baby brambory, salatek ( L ) 169</li><li>Burrito s pikantnim fazolovym chilli s pecenymi palivymi paprikami, zakysana smetana, zeleninova ryze, salatek {L} 139</li></ol>
+<ol><li>Grilovane biftecky z rybich filetu {hejk, makrela, sled} s petrzelkovym pestem se susenymi rajcaty, stouchane brambory, salatek z cervene repy 139</li><li>Peceny cerstvy morsky das a africky sumecek s petrzelkovym pestem se susenymi rajcaty, stouchane brambory, salatek z cervene repy 175</li><li>Veprove ribsy dusene v pikantni korejske marinade s gochujang, zazvorem a sezamem, jasminova ryze, zeleninove cukemono s gaj coj a palivymi paprikami 139</li><li>Italske dynove rizoto s parmezanem a pecenymi koroptvimi prsicky, salatek 169</li><li>Marocka cizrnova tagina s pecenou maslovou dyni, rajcaty a Ras el hanout, kuskus, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
