Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pátek, 12. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Tomatová s pestem</strong>
+<strong>Kmínová s vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřová líčka na smetaně s rýží</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							129,-
-						</span>
-</p>
-<p>
-<strong>Mexické pikantní fazole s grilovanou klobásou a tortillou</strong>
+<strong>Krůtí nudličky na houbách s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
+						</span>
+</p>
+<p>
+<strong>Palačinky s tvarohem a ovocnou omáčkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							105,-
 						</span>
 </p>
 <p>
