Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pátek, 12. 11. 2021</h5>
+<h5>Sobota, 13. 11. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Kmínová s vejcem</strong>
@@ -50,39 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pátek 12.11.2021</div>
+<div class="nadpis">Sobota 13.11.2021</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Věneček</div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Frankfurtská polévka s uzeným masem samostatně <em title="Mléko">7</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Frankfurtská polévka s uzeným masem s menu <em title="Mléko">7</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Segedínský guláš, houskový knedlík, opečená slanina <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Kuřecí chilli con carne, dušená rýže, jalapeňos   <em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Krémové rizoto z tarhoni, žampiony, cuketa, pórek, parmazán  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -93,10 +63,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  ok</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Frankfurtská s klobásou</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Husí kaldoun s žemlovým knedlíčkem a nudlemi</td><td class="menuPrice">49,-</td></tr></tbody>
+<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Štěpánská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová plec na česneku, bramborové knedlíky, špenát</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na roštu s opečenou klobásou, pečené brambory s kmínem</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Plátkovaná vepřová pečeně, grilovaný lilek s balsamicem, celerové pyré, vařené vejce</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné hořčičné omáčce, restované špetzle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Pšeničná tortilla plněná trhanými listy salátů a zeleninou, česnekovým dresinkem, vepřovou panenkou, smažené bramborové hranolky, zakysaná smetana</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">400g</td><td class="menuName">Pečené husí stehno s červeným perníkovým zelím a bílým zelím, kynuté houskové knedlíky a bramborové knedlíky   </td><td class="menuPrice">195,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát, ochucený citronovým dresinkem grilovaný hermelín, vařené vejce, brusinkové žerve</td><td class="menuPrice">´135,-</td></tr><tr><td class="menuWeight">1/4</td><td class="menuName">1/4 (1000g) Pomalu pečená svatomartinská husa s červeným perníkovým zelím a bílým zelím, kynuté houskové knedlíky a bramborové knedlíky           </td><td class="menuPrice">349,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Náš kynutý knedlík s borůvkami na smetanové omáčce s cukrem, máslem a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,4L</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nepečený piškotový řez s broskvemi a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špenátový krém s vařeným vejcem a zakysanou smetanou</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Husí kaldoun se žemlovým knedlíčkem a nudlemi</td><td class="menuPrice">49,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Buřty na černém pivu s cibulí a beraním rohem, naše bramboráčky</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cikánská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na roštu s klobásou, naše bramborové krokety, mexický dip</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g  Do růžova pečená vepřová panenka na smetanové omáčce s barevným drceným pepřem, fazolové lusky, grusetky</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažená vepřová kotleta bez kosti obalená v čerstvě namleté strouhance, vařené brambory s máslem a šnitlíkem. citron</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené holanské řízky, bramborová kaše s máslem a šnitlíkem, kyselá okurka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné sýrové omáčce, restované špetzle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Náš mletý vepřový dvojitý burger 100g+100g se šunkou, sýrem, ledovým salátem,rajčatem, kyselou okurkou a majonézovým dresinkem, smažené bramborové hranolky, tatarka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">400g</td><td class="menuName">Pečené husí stehno s červeným perníkovým zelím a bílým zelím, kynuté houskové knedlíky a bramborové knedlíky</td><td class="menuPrice">195,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Náš kynutý knedlík s borůvkami na smetanové omáčce s cukrem, máslem a šlehačkou   </td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a rukolou s tomaty, promíchaný olivovým olejem, kuřecí stripsy</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">0,04L</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nepečený piškotový řez s broskvemi a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -143,7 +116,7 @@ a vanilkovým Crème fraîche	</td>
 </tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Dýňový krém se zázvorem a chilli 1a,7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vepřová pečeně špikovaná sušenými švestkami s glazovanou mrkví a mačkanými brambory s pažitkou 1a,7</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažený sýr plněný šunkou s americkými brambory, naší tatarskou omáčkou a trhaným salátem 1a,3,7,10</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Pečená kuřecí křídla s coleslaw salátem, blue cheese omáčkou a rozpečenou bylinkovou bagetou 1a,3,7,10</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"></table>
 </td>
 </tr>
 </table>
