--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Sobota, 13. 11. 2021</h5>
+<h5>Neděle, 14. 11. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Kmínová s vejcem</strong>
@@ -50,7 +50,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Sobota 13.11.2021</div>
+<div class="nadpis">Neděle 14.11.2021</div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
@@ -66,10 +66,10 @@
 <h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špenátový krém s vařeným vejcem a zakysanou smetanou</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Husí kaldoun se žemlovým knedlíčkem a nudlemi</td><td class="menuPrice">49,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s hříbky</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Buřty na černém pivu s cibulí a beraním rohem, naše bramboráčky</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cikánská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na roštu s klobásou, naše bramborové krokety, mexický dip</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g  Do růžova pečená vepřová panenka na smetanové omáčce s barevným drceným pepřem, fazolové lusky, grusetky</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažená vepřová kotleta bez kosti obalená v čerstvě namleté strouhance, vařené brambory s máslem a šnitlíkem. citron</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené holanské řízky, bramborová kaše s máslem a šnitlíkem, kyselá okurka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné sýrové omáčce, restované špetzle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Náš mletý vepřový dvojitý burger 100g+100g se šunkou, sýrem, ledovým salátem,rajčatem, kyselou okurkou a majonézovým dresinkem, smažené bramborové hranolky, tatarka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">400g</td><td class="menuName">Pečené husí stehno s červeným perníkovým zelím a bílým zelím, kynuté houskové knedlíky a bramborové knedlíky</td><td class="menuPrice">195,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Náš kynutý knedlík s borůvkami na smetanové omáčce s cukrem, máslem a šlehačkou   </td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a rukolou s tomaty, promíchaný olivovým olejem, kuřecí stripsy</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">0,04L</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nepečený piškotový řez s broskvemi a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené masové karbanátky, vařené brambory s máslem, kyselá okurka, hořčice</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová kýta na paprice, těstoviny vřetena</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, špenát</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta 150g Dorůžova pečená vepřová panenka, brokolicové lívanečky,grilovaná karotka,  zakysaná smetana, vařené vejce</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na grilu s volským okem, naše bramborové krokety, tatarka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">3 ks  Plněné ovocné knedlíky s vanilkovým šodó a šlehačkou</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažený řízek z kuřecích prsou obalený v cornflakes, vařené brambory s máslem a šnitlíkem, citrón</td><td class="menuPrice">136,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně se šunkou gratinovaný uzeným sýrem, smažené hranolky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Dorůžova pečená vepřová panenka na jemné pepřové omáčce, fazolové lusky na másle, mačkané brambory s máslem a sýrem</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">400g</td><td class="menuName">Pečené husí stehno s červeným perníkovým zelím a bílým zelím, kynuté houskové knedlíky a bramborové knedlíky</td><td class="menuPrice">195,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Míchaný zeleninový salát s olivovým olejem, stripsy z vepřové panenky v těstíčku, vařené vejce</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Náš kynutý knedlík s borůvkami na smetanové omáčce s cukrem, máslem a šlehačkou   </td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,04L</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nepečený piškotový řez s broskvemi a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -80,35 +80,84 @@
 <table class="dm">
 <tbody>
 <tr>
-<td class="amount">120g</td>
-<td class="title">Zvěřinová terina s pistáciemi, švestkovým chutney
-a domácím dalamánkem 1ab,7,8g	</td>
-<td class="pricem">155 Kč</td>
+<td class="amount"></td>
+<td class="title">Prdelačka 1a</td>
+<td class="pricem">49 Kč</td>
 </tr>
 <tr>
 <td class="amount"></td>
-<td class="title">Dýňový krém s chilli, zázvorem, kokosovým mlékem
-a opraženými semínky 1a,7</td>
+<td class="title">Dršťková 1a</td>
+<td class="pricem">59 Kč</td>
+</tr>
+<tr>
+<td class="amount">100 g</td>
+<td class="title">Světlá tlačenka, cibulka, ocet, pečivo 1ab</td>
 <td class="pricem">69 Kč</td>
 </tr>
 <tr>
-<td class="amount">150g</td>
-<td class="title">Pečené buřty na černém pivu se zeleninou, feferonkami a cibulkou,
-		náš cibulový chléb 1abc</td>
+<td class="amount">100 g</td>
+<td class="title">Opečená jitrnice, salát z kysaného zelí, hořčice,
+křen, pečivo 1ab,10,12</td>
+<td class="pricem">59 Kč</td>
+</tr>
+<tr>
+<td class="amount">100 g</td>
+<td class="title">Opečené kroupové jelítko, salát z kysaného zelí,
+hořčice, křen, pečivo 1ab,10,12</td>
+<td class="pricem">59 Kč</td>
+</tr>
+<tr>
+<td class="amount">100 g</td>
+<td class="title">Teplé škvarky, chléb se sádlem a mladou cibulkou
+		1ab</td>
+<td class="pricem">69 Kč</td>
+</tr>
+<tr>
+<td class="amount">300 g</td>
+<td class="title">Ovarové koleno, salát z kysaného zelí,
+hořčice a křen, pečivo 1ab,10,12</td>
+<td class="pricem">149 Kč</td>
+</tr>
+<tr>
+<td class="amount">400 g</td>
+<td class="title">Studená variace (tlačenka, škvarky, jitrnice,
+jelítko), hořčice, křen, salát z kysaného zelí,
+pečivo 1ab,10,12</td>
+<td class="pricem">169 Kč</td>
+</tr>
+<tr>
+<td class="amount">150 g</td>
+<td class="title">Vepřové výpečky, červené a bílé zelí,
+variace našich knedlíků, vídeňská cibulka
+1a,3,7,12</td>
 <td class="pricem">139 Kč</td>
 </tr>
 <tr>
-<td class="amount">200g</td>
-<td class="title">Grilovaný kančí hřbet balený ve slanině
-s máslovou růžičkovou kapustou a celerovým pyré,
-vinná omáčka s jalovcem 1a,7,9,12</td>
-<td class="pricem">249 Kč</td>
+<td class="amount">150 g</td>
+<td class="title">Vepřové výpečky s cibulkou a chlebem 1ab</td>
+<td class="pricem">119 Kč</td>
+</tr>
+<tr>
+<td class="amount">200 g</td>
+<td class="title">Pečený jitrnicový prejt s hořčicí a salátem
+z kysaného zelí, pečivo 1ab,7,10,12</td>
+<td class="pricem">119 Kč</td>
 </tr>
 <tr>
 <td class="amount"></td>
-<td class="title">Domácí rebarborový koláč s máslovou drobenkou
-a vanilkovým Crème fraîche	</td>
-<td class="pricem">89 Kč</td>
+<td class="title"></td>
+<td class="pricem"> </td>
+</tr>
+<tr>
+<td class="amount">0,04l</td>
+<td class="title">ORIGINÁL BARTIDA HRUŠKOVÝ LIKÉR WILLIAMS</td>
+<td class="pricem">59 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Všechny naše pokrmy je možné zabalit sebou. Pokud není uvedeno + box na jídlo 10,-
+S sebou : Jitrnice 40,- ,  Jelítko 40,-</td>
+<td class="pricem"></td>
 </tr>
 </tbody>
 </table>
