--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pondělí, 15. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Kmínová s vejcem</strong>
+<strong>Zeleninová s hovězím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Krůtí nudličky na houbách s rýží</strong>
+<strong>Těstoviny bolognesse s parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							129,-
 						</span>
 </p>
 <p>
-<strong>Palačinky s tvarohem a ovocnou omáčkou</strong>
+<strong>Maďarský Vepřový guláš s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							105,-
+							127,-
 						</span>
 </p>
 <p>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pondělí 15.11.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Medovník</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie bez lepku</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Perníkový koláč s hruškami, mandle</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Pórková polévka s bramborami, libeček samostatně <em title="Mléko">7</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Pórková polévka s bramborami, libeček s menu <em title="Mléko">7</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí gyros, restovaný bulgur, pita chléb, čerstvá zelenina, česnekový dip <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Vepřová pečeně, dušené červené zelí s hruškou, pečené batáty    <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Vegetariánská tikka masala, jasmínová rýže, bylinkový jogurt <em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -128,7 +168,7 @@ a skořicovým cukrem 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Grilovane biftecky z rybich filetu {hejk, makrela, sled} s petrzelkovym pestem se susenymi rajcaty, stouchane brambory, salatek z cervene repy 139</li><li>Peceny cerstvy morsky das a africky sumecek s petrzelkovym pestem se susenymi rajcaty, stouchane brambory, salatek z cervene repy 175</li><li>Veprove ribsy dusene v pikantni korejske marinade s gochujang, zazvorem a sezamem, jasminova ryze, zeleninove cukemono s gaj coj a palivymi paprikami 139</li><li>Italske dynove rizoto s parmezanem a pecenymi koroptvimi prsicky, salatek 169</li><li>Marocka cizrnova tagina s pecenou maslovou dyni, rajcaty a Ras el hanout, kuskus, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s okurkovymi tzatziki, zeleninovy pilaf z basmati ryze, salatek 139</li><li>Pecena cerstva kambala a filet z norskeho lososa s okurkovymi tzatziki, zeleninovy pilaf z basmati ryze, salatek 169</li><li>Pomalu dusene secuanske hovezi ve sladke omacce se zazvorem, secuanskym peprem a korenim peti vuni, jasminova ryze, salatek 139</li><li>Pecena plec z mladeho divocaka na jalovci, bavorske bramborove knedliky s houskou, cervena repa na vine {L} 159</li><li>Ratatouille z pecene zeleniny s bylinkami a balkanskym syrem, hrachova kase se smazenou cibulkou, salatek 139</li></ol>
 </td>
 </tr>
 </table>
